# littlefs-toy

./: .gitignore  CMakeLists.txt  README.md
cmake/: toolchain-mingw64.cmake
man/: lfs.1  lfst.1
src/: config.h.in  lfs.c  lfs_driver.c  lfs_driver.h  lfs_extra.c  lfs_extra.h  lfs_opts.h  lfst.c  littlefs-toy.h  util.c  win32_compat.h
tests/: README  lfs_4096.img  lfs_512.img  lfs_offset_64K.img  test_lfs.py  test_lfst.py
